This file documents the revision history for Foorum.

0.05  unknown
    - use Net::IP::Match::Regexp to ban IP range from registration (5/6/2007)
    - an admin tool for ban ip (17/6/2007)
    - perltidy -b -ci=4 *.pm

0.04  Sat Jun 3 15:55:55 2007
    - add log_error table and Foorum::Log for both Model and /bin/cron (20/5/2007)
    - move script/foorum_server.pl to bin/foorum_server.pl (20/5/2007)
    - add a new INSTALL file (20/5/2007)
    - Admin tool for log_error (20/5/2007)
    - bin/cron/remove_db_old_data.pl and conf/cron.yml to remove old db data (20/5/2007)
    - add a new Model/Validation.pm and remove 'FormValidator::Simple::Plugin::DBIC::Unique' (26/5/2007)
    - add cache for comments (26/5/2007)
    - Foorum::Filter: add textile support and remove 'Template::Plugin::HTML::BBCode' (26/5/2007)
    - more sane change_email (2/6/2007)

0.03  Sat May 19 13:24:00 2007
    - remove Plugin::Email. insert into table scheduled_email and use a cron script to send. (19/5/2007)
    - remove Plugin::Scheduler. all cron scripts goes to /bin/cron (19/5/2007)
    - bug fixes (19/5/2007)
    - add /word/$word step one! (19/5/2007)

0.02  Fri Apr 20 12:00:00 2007
    - Message.pm sub delete (20/4/2007)
    - PageCache with I18N (7/5/2007)
    - Merge Forums in Admin Interface (7/5/2007)

0.01  Thu Feb 23 16:32:50 2006
    - initial revision, generated by Catalyst