@@ -43,6 +43,7 @@ requires 'YAML::Syck';
 requires 'File::Slurp';
 requires 'Net::IP::Match::Regexp';
 requires 'Net::CIDR::Lite';
+requires 'Object::Destroyer';
 
 catalyst;
 
