@@ -212,6 +212,9 @@ sub clear_cached_policy {
 
     if ( $info->{user_id} ) {
         $c->cache->delete("policy|user_role|user_id=$info->{user_id}");
+        
+        # clear user cache too
+        $c->model('User')->delete_cache_by_user_cond($c, { user_id => $info->{user_id} } );
     }
 
     # field_id != 'site'
