@@ -16,10 +16,6 @@ __PACKAGE__->set_primary_key('user_id');
 __PACKAGE__->add_unique_constraint( constraint_name => [qw/username email/], );
 
 __PACKAGE__->might_have(
-    'last_post' => 'Foorum::Schema::Topic',
-    { 'foreign.topic_id' => 'self.last_post_id' }
-);
-__PACKAGE__->might_have(
     'details' => 'Foorum::Schema::UserDetails',
     { 'foreign.user_id' => 'self.user_id' }
 );
